Boost settings redesign #3002

--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
@@ -1,84 +1,40 @@
 <ng-container [m-clientMeta]="{ medium: 'boost-rotator' }">
-  <div class="m-boost-rotator-tools">
-    <span
-      i1n="@@BOOST_ROTATOR__SHOWING_BOOSTS"
-      *ngIf="router.url == '/newsfeed/boost'"
-    >
-      Showing boosts
-    </span>
-    <div class="m-layout--spacer"></div>
-    <ul class="m-boost-rotator-tabs">
-      <li
-        routerLink="/discovery/boost/feed"
-        *ngIf="router.url !== '/newsfeed/boost'"
-        class="m-boostRotator__tab--boost-feed"
-      >
-        <a i18n="@@M__COMMON__BOOSTFEED">Boostfeed</a>
-      </li>
-      <ng-container *ngIf="boosts.length > 0; else noBoosts">
-        <li (click)="prev()">
-          <i class="material-icons mdl-color-text--blue-grey-400"
-            >chevron_left</i
-          >
-        </li>
-        <li (click)="next()">
-          <i class="material-icons mdl-color-text--blue-grey-400"
-            >chevron_right</i
-          >
-        </li>
-      </ng-container>
-      <ng-template #noBoosts>
-        <li>
-          <i style="height: 32px;display: block;"></i>
-        </li>
-      </ng-template>
-      <li class="m-boost-rotator-tabs--settings">
-        <m-newsfeed--dropdown [showBoost]="true"></m-newsfeed--dropdown>
-      </li>
-    </ul>
-  </div>
-
   <div
     *ngIf="!disabled"
     #rotatorEl
-    [class.m-newsfeed__boostRotator]="useNewNavigation"
+    class="m-newsfeed__boostRotator"
     [style.min-height]="height"
     [hidden]="!boosts.length"
   >
+    <div
+      *ngIf="boosts.length > 0"
+      class="m-carousel__overflowScrollButton--left"
+      (click)="prev()"
+    >
+      <i class="material-icons">chevron_left</i>
+    </div>
     <ng-container *ngFor="let entity of boosts; let i = index">
-      <ng-container *mIfFeature="'navigation'; else legacyActivity">
-        <m-activity
-          @fastFade
-          [entity]="entity"
-          [displayOptions]="{
-            showOnlyCommentsInput: false,
-            showComments: false,
-            fixedHeight: true,
-            fixedHeightContainer: true
-          }"
-          [attr.data-minds-activity-guid]="entity.guid"
-          [slot]="i + 1"
-          [canRecordAnalytics]="false"
-          *ngIf="i === currentPosition"
-        ></m-activity>
-      </ng-container>
-      <ng-template #legacyActivity>
-        <minds-activity
-          [object]="entity"
-          [boostToggle]="true"
-          [class]="
-            'mdl-card m-border item m-boost-rotator-item m-boost-rotator-item-' +
-            i
-          "
-          visible="true"
-          [hidden]="i != currentPosition"
-          [showBoostMenuOptions]="true"
-          [slot]="i + 1"
-          [visibilityEvents]="false"
-          [attr.data-minds-activity-guid]="entity.guid"
-          #activities
-        ></minds-activity>
-      </ng-template>
+      <m-activity
+        @fastFade
+        [entity]="entity"
+        [displayOptions]="{
+          showOnlyCommentsInput: false,
+          showComments: false,
+          fixedHeight: true,
+          fixedHeightContainer: true
+        }"
+        [attr.data-minds-activity-guid]="entity.guid"
+        [slot]="i + 1"
+        [canRecordAnalytics]="false"
+        *ngIf="i === currentPosition"
+      ></m-activity>
     </ng-container>
+    <div
+      *ngIf="boosts.length > 0"
+      class="m-carousel__overflowScrollButton--right"
+      (click)="next()"
+    >
+      <i class="material-icons">chevron_right</i>
+    </div>
   </div>
 </ng-container>
