--- a/src/app/modules/newsfeed/feeds/sorted.component.html
+++ b/src/app/modules/newsfeed/feeds/sorted.component.html
@@ -23,9 +23,7 @@
         (onChange)="setSort($event.algorithm, $event.period, $event.customType)"
       ></m-sort-selector>
 
-      <div>
-        <m-newsfeed--dropdown [showBoost]="false"></m-newsfeed--dropdown>
-      </div>
+      <div></div>
     </div>
 
     <div
