--- a/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
+++ b/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
@@ -3,7 +3,7 @@
     class="m-settingsV2__headerLabel"
     i18n="@@SETTINGS__PRO__HASHTAGS__LABEL"
   >
-    Theme
+    Hashtags
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__PRO__HASHTAGS__DESCRIPTION">
     Set up your category filter hashtags.
