Hide transcode status when some video transcodes are available #1629

--- a/src/app/modules/media/components/video-player/player.component.html
+++ b/src/app/modules/media/components/video-player/player.component.html
@@ -1,14 +1,14 @@
 <ng-container *ngIf="isPlayable(); else placeholder">
-  <span class="m-videoPlayer__notice--error" *ngIf="status === 'failed'">
+  <span
+    class="m-videoPlayer__notice--error"
+    *ngIf="status === 'failed' && !(awaitingTranscode | async)"
+  >
     There was an error transcoding this video.
   </span>
   <span
-    class="m-videoPlayer__notice--transcoding"
-    *ngIf="status === 'transcoding'"
+    class="m-videoPlayer__notice--created"
+    *ngIf="awaitingTranscode | async"
   >
-    This video is still transcoding.
-  </span>
-  <span class="m-videoPlayer__notice--created" *ngIf="status === 'created'">
     This video is waiting to be transcoded.
   </span>
   <div class="m-videoPlayer__screen">
