--- a/src/app/modules/wire/v2/creator/form/form.component.html
+++ b/src/app/modules/wire/v2/creator/form/form.component.html
@@ -9,7 +9,7 @@
     <div class="m-tabs__tab" *ngIf="(service.currencyOptions$ | async).tokens">
       <a
         [class.m-tabs__tab--selected]="(service.type$ | async) === 'tokens'"
-        (click)="service.setType('tokens')"
+        (click)="setType('tokens')"
         i18n="currency|@@COMMON__TOKENS"
         >Tokens</a
       >
@@ -18,7 +18,7 @@
     <div class="m-tabs__tab" *ngIf="(service.currencyOptions$ | async).usd">
       <a
         [class.m-tabs__tab--selected]="(service.type$ | async) === 'usd'"
-        (click)="service.setType('usd')"
+        (click)="setType('usd')"
         i18n="currency|@@COMMON__USD"
         >USD</a
       >
@@ -27,7 +27,7 @@
     <div class="m-tabs__tab" *ngIf="(service.currencyOptions$ | async).eth">
       <a
         [class.m-tabs__tab--selected]="(service.type$ | async) === 'eth'"
-        (click)="service.setType('eth')"
+        (click)="setType('eth')"
         i18n="currency|@@COMMON__ETH"
         >ETH</a
       >
@@ -36,7 +36,7 @@
     <div class="m-tabs__tab" *ngIf="(service.currencyOptions$ | async).btc">
       <a
         [class.m-tabs__tab--selected]="(service.type$ | async) === 'btc'"
-        (click)="service.setType('btc')"
+        (click)="setType('btc')"
         i18ni18n="currency|@@COMMON__BTC"
         >BTC</a
       >
