(chore): rename pro earnings to just earnings - closes #3749

--- a/src/app/modules/wallet/v2/cash/balance/balance-cash.component.html
+++ b/src/app/modules/wallet/v2/cash/balance/balance-cash.component.html
@@ -26,20 +26,19 @@
   </div>
   <div class="m-walletBalance--cash__colContainer">
     <!-- -------------------------------------------- -->
-    <!--- PRO EARNINGS --------------------------------->
+    <!--- EARNINGS ------------------------------------->
     <!-- -------------------------------------------- -->
 
     <div class="m-walletBalance--cash__col" *ngIf="proEarnings">
       <div
         class="m-walletBalance--cash__colTitle"
-        i18n="@@WALLET_V2__BALANCE_CASH__PRO_EARNINGS_INFO"
+        i18n="@@WALLET_V2__BALANCE_CASH__EARNINGS_INFO"
       >
-        Pro Earnings<m-tooltip icon="help"
-          >At the end of each month, your Pro earnings will move into your
-          pending balance if you've reached the $100 threshold. When this
-          happens, your Pro earnings will be reset to zero. If you haven't
-          reached the threshold, your earnings will rollover to the next
-          month.</m-tooltip
+        Earnings<m-tooltip icon="help"
+          >At the end of each month, your earnings will move into your pending
+          balance if you've reached the $100 threshold. When this happens, your
+          earnings will be reset to zero. If you haven't reached the threshold,
+          your earnings will rollover to the next month.</m-tooltip
         >
       </div>
       <div class="m-walletBalance--cash__colValWrapper">
