--- a/src/app/modules/wallet/v2/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/wallet/v2/components/transactions-table/transactions-table.component.html
@@ -71,9 +71,7 @@
               ><div class="m-walletTransactionsTable__typeWrapper--pro_earning">
                 <i class="material-icons m-walletTransactionsTable__icon--arrow"
                   >arrow_forward</i
-                ><span i18n="@@WALLETV2_TX_TABLE__PRO_EARNINGS"
-                  >Pro Earnings</span
-                >
+                ><span i18n="@@WALLETV2_TX_TABLE__PRO_EARNINGS">Earnings</span>
               </div></ng-template
             >
 
