(chore): write blog vs create blog - closes #3722

--- a/src/app/modules/newsfeed/poster/poster.component.html
+++ b/src/app/modules/newsfeed/poster/poster.component.html
@@ -41,7 +41,7 @@
       >
         <a class="m-posterActionBar__CreateBlog" (click)="createBlog($event)">
           <i class="material-icons m-posterActionBar__Icon">subject</i>
-          <span class="m-posterActionBar__Label">Create blog</span>
+          <span class="m-posterActionBar__Label">Write blog</span>
         </a>
 
         <!-- Attachments -->
