Close user menu on sidebar nav click

--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -6,6 +6,7 @@
 <div
   class="m-sidebarNavigation"
   [class.m-sidebarNavigation--slide]="layoutMode === 'phone'"
+  (click)="onSidebarNavClick()"
 >
   <nav>
     <div class="m-sidebarNavigation__top">
