Drag and drop composer #1212

--- a/src/app/modules/composer/components/base/base.component.html
+++ b/src/app/modules/composer/components/base/base.component.html
@@ -3,6 +3,8 @@
   [class.m-composer__base--withPreview]="
     (attachmentPreview$ | async) || (richEmbedPreview$ | async)
   "
+  m-dragAndDrop
+  (onFileDropped)="onAttachmentPaste($event)"
 >
   <div class="m-composerBase__container">
     <m-composer__titleBar
