(chore): remove custom from composer

--- a/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
@@ -18,14 +18,14 @@
           >Memberships</a
         >
       </div>
-      <div class="m-tabs__tab">
+      <!-- <div class="m-tabs__tab">
         <a
           [ngClass]="{ 'm-tabs__tab--selected': type === 'custom' }"
           (click)="type = 'custom'"
           data-cy="monetize-membership-custom-tab"
           >Custom</a
         >
-      </div>
+      </div> -->
     </div>
   </div>
   <m-composer__monetizeV2__plus
