(chore): show plus/pro bagdes - closes engine#1701

--- a/src/app/modules/channels/v2/header/header.component.html
+++ b/src/app/modules/channels/v2/header/header.component.html
@@ -24,7 +24,7 @@
         *ngIf="channel.guid"
         class="m-channelHeaderInfoName__badges"
         [user]="channel"
-        [badges]="['admin', 'verified']"
+        [badges]="['admin', 'verified', 'plus']"
       ></m-channel--badges>
     </h1>
 
