--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -37,7 +37,11 @@
         </ng-container>
       </div>
 
-      <div class="minds-list" style="padding: 20px 40px;" *ngIf="activity">
+      <div
+        class="minds-list"
+        style="padding: 20px 40px;"
+        *ngIf="activity && !error"
+      >
         <m-activity
           [entity]="activity"
           [displayOptions]="{
