--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -60,6 +60,15 @@ m-activity__content {
   }
   .m-activityContent__messageWrapper {
     padding: 0px $activity-padding-lr 16px;
+
+    .m-code-highlight {
+      overflow-x: auto;
+      font-size: 16px;
+
+      pre {
+        overflow-x: auto;
+      }
+    }
   }
 }
 
