Fix/multiline login error 3746

--- a/src/app/modules/auth/login.component.ng.scss
+++ b/src/app/modules/auth/login.component.ng.scss
@@ -127,6 +127,16 @@
           flex-direction: row;
           justify-content: space-between;
 
+          .m-login__formError {
+            margin-right: 20%;
+          }
+
+          ::ng-deep {
+            m-shadowboxsubmitbutton {
+              flex-shrink: 0;
+            }
+          }
+
           button.mf-button {
             width: 132px;
             height: 60px;
