Plus + upgrade project pages update #2823

--- a/src/app/common/components/badges/badges.component.html
+++ b/src/app/common/components/badges/badges.component.html
@@ -8,7 +8,7 @@
       iconClass="selected"
       i18n="Plus as user status@@COMMON__BADGES__PLUS"
     >
-      Plus
+      Minds+
     </m-tooltip>
   </li>
 
