--- a/src/app/modules/blockchain/token-purchase/purchase.component.html
+++ b/src/app/modules/blockchain/token-purchase/purchase.component.html
@@ -13,13 +13,13 @@
     />
 
     <label for="m-blockchainTokenPurchase__amountInput" i18n="@@COMMON__TOKENS"
-      >Tokens</label
+      >tokens</label
     >
   </div>
 
   <div class="m-blockchainTokenPurchase__ethTotal" ngPreserveWhitespaces>
     <span class="m-blockchainTokenPurchaseEthTotal__value">{{ amount }}</span>
-    Eth
+    ETH
   </div>
 
   <div class="m-blockchainTokenPurchase__action">
@@ -43,7 +43,7 @@
   </span>
   |
   <a (click)="purchaseEth(); $event.preventDefault()" i18n="@@COMMON__BUY_ETH"
-    >Buy Eth</a
+    >Buy ETH</a
   >
 </div>
 
