--- a/src/app/modules/plus/subscription/subscription.component.html
+++ b/src/app/modules/plus/subscription/subscription.component.html
@@ -52,7 +52,7 @@
         (click)="enable()"
         i18n="@@PLUS_SUBSCRIPTION__UPGRADE_TO_PLUS"
       >
-        Upgrade to Plus
+        Upgrade to Minds+
       </button>
     </div>
   </div>
@@ -65,7 +65,7 @@
         (click)="disable()"
         i18n="@@PLUS_SUBSCRIPTION__CANCEL_PLUS"
       >
-        Cancel Plus
+        Cancel Minds+
       </button>
     </div>
   </ng-template>
