--- a/src/app/modules/upgrades/buy-tokens.component.html
+++ b/src/app/modules/upgrades/buy-tokens.component.html
@@ -4,8 +4,9 @@
       <h2>Buy Tokens</h2>
 
       <p class="m-upgradesBuyTokens__description">
-        Buy tokens to support Minds and your favorite channels. Unlock premium
-        features and launch advertising campaigns to expand your reach.
+        Use tokens to boost your content for more views and support your
+        favorite channels. Unlock premium features and launch advertising
+        campaigns to expand your reach.
       </p>
 
       <p>
