--- a/src/app/modules/upgrades/upgrades.component.html
+++ b/src/app/modules/upgrades/upgrades.component.html
@@ -17,31 +17,32 @@
           class="m-marketing__description"
           i18n="@@UPGRADES__UNLOCK_POWERFUL_FEATURES"
         >
-          Unlock powerful features to supercharge your channel.
+          Your support helps keep Minds and its creator community free and
+          independent.
         </p>
 
         <ul class="m-marketing__points">
-          <li i18n="@@UPGRADES__JOIN_PLUS_HIDE_BOOSTS">
-            Join Plus to hide boosts, access exclusive content and more
+          <li i18n="@@UPGRADES__JOIN_PLUS_STREAMING_SERVICE">
+            Join Minds+, the first ever community-powered streaming service
           </li>
 
           <li i18n="@@UPGRADES__LAUNCH_PRO_BUILD_WEBSITE">
-            Launch Pro to build your own website and get paid for your work
+            Join Minds Pro and upgrade your channel to a custom website
           </li>
 
           <li i18n="@@UPGRADES__BUY_MINDS_TOKENS_BOOST_CONTENT">
-            Buy Minds Tokens to boost content and support creators
+            Buy Minds Tokens to boost content for more views
           </li>
         </ul>
 
-        <a
-          class="mf-button mf-button--hollow m-marketing--hideMobile"
+        <div
+          class="mf-button m-upgradesUpgradeOptionsPlan__action m-upgrades__upgradeNowBtn"
           (click)="upgradeNow(); $event.preventDefault()"
           data-cy="m-upgrades__upgrade-now-button"
           i18n="@@COMMON__UPGRADE_NOW"
         >
-          Upgrade now
-        </a>
+          Upgrade Now
+        </div>
       </div>
 
       <div
