--- a/src/app/modules/marketing/styles/style-1.scss
+++ b/src/app/modules/marketing/styles/style-1.scss
@@ -17,7 +17,7 @@
       padding: 95px 0 85px;
 
       @media screen and (max-width: $m-grid-min-vp) {
-        padding: 30px 0;
+        padding: 50px 0;
         margin: 0 20px;
       }
     }
@@ -65,7 +65,7 @@
 
     ul.m-marketing__points {
       @media screen and (max-width: $m-grid-min-vp) {
-        padding: 0 30px;
+        padding: 0 30px 0 50px;
       }
     }
 
