--- a/src/app/modules/upgrades/upgrade-options.component.html
+++ b/src/app/modules/upgrades/upgrade-options.component.html
@@ -32,7 +32,7 @@
     <div
       class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--first"
     >
-      <h3 i18n="@@UPGRADE_OPTIONS__PLUS">Plus</h3>
+      <h3 i18n="@@UPGRADE_OPTIONS__PLUS">Minds+</h3>
 
       <p
         class="m-upgradesUpgradeOptionsPlan__targetAudience"
@@ -47,25 +47,32 @@
         class="m-upgradesUpgradeOptionsPlan__description"
         i18n="@@UPGRADE_OPTIONS__UPGRADE_CHANNEL_INFO"
       >
-        Upgrade your channel to unlock new features and upgrade your experience.
+        Unlock the first community-powered streaming service and earn revenue.
       </p>
     </div>
 
     <div class="m-upgradesUpgradeOptionsPlan__row">
       <ul>
         <li i18n="@@UPGRADE_OPTIONS__ACCESS_EXCLUSIVE_CONTENT">
-          Access exclusive content
+          Access exclusive Minds+ content
+        </li>
+        <li i18n="@@UPGRADE_OPTIONS__SUBMIT_EXCLUSIVE_CONTENT">
+          Submit content to Minds+ and earn
         </li>
 
-        <li i18n="@@UPGRADE_OPTIONS__VERIFY_YOUR_CHANNEL">
-          Verify your channel
+        <li i18n="@@UPGRADE_OPTIONS__UNLOCK_BONUS_FEATURES">
+          Unlock bonus features
         </li>
 
-        <li i18n="@@UPGRADE_OPTIONS__HIDE_BOOSTED_CONTENT">
-          Hide boosted content
+        <li i18n="@@UPGRADE_OPTIONS__PRIORITY_SUPPORT">
+          Priority support
         </li>
       </ul>
+    </div>
 
+    <div
+      class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--last"
+    >
       <p>
         <a
           class="m-upgradesUpgradeOptionsPlan__moreInfo"
@@ -75,9 +82,6 @@
           More info
         </a>
       </p>
-    </div>
-
-    <div class="m-upgradesUpgradeOptionsPlan__row">
       <p
         class="m-upgradesUpgradeOptionsPlan__pricing"
         i18n="@@UPGRADE_OPTIONS__PER_MONTH"
@@ -103,7 +107,7 @@
         data-cy="m-upgradeOptions__upgrade-to-plus-button"
         i18n="@@COMMON__UPGRADE_TO_PLUS"
       >
-        Upgrade to Plus
+        Upgrade to Minds+
       </a>
     </div>
 
@@ -147,7 +151,11 @@
           Custom support
         </li>
       </ul>
+    </div>
 
+    <div
+      class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--last"
+    >
       <p>
         <a
           class="m-upgradesUpgradeOptionsPlan__moreInfo"
@@ -168,9 +176,6 @@
           Try Pro
         </a>
       </p>
-    </div>
-
-    <div class="m-upgradesUpgradeOptionsPlan__row">
       <p
         class="m-upgradesUpgradeOptionsPlan__pricing"
         i18n="@@COMMON__PER_MONTH"
@@ -236,19 +241,27 @@
 
     <div class="m-upgradesUpgradeOptionsPlan__row">
       <ul>
-        <li i18n="@@UPGRADE_OPTIONS__WHITE_LABEL_WEB_MOBILE">
-          White-labeled web + mobile app
+        <li i18n="@@UPGRADE_OPTIONS__WHITE_LABEL_MOBILE">
+          White-labeled mobile app
         </li>
 
         <li i18n="@@UPGRADE_OPTIONS__CUSTOM_DOMAIN_BRAND">
-          Custom domain and brand
+          Use a custom domain and branding
         </li>
 
         <li i18n="@@UPGRADE_OPTIONS__INDEPENDANT_FROM_MINDS">
           Independent from Minds
         </li>
-      </ul>
 
+        <li i18n="@@UPGRADE_OPTIONS__PRIORITY_SUPPORT">
+          Priority support
+        </li>
+      </ul>
+    </div>
+
+    <div
+      class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--last"
+    >
       <p>
         <a
           class="m-upgradesUpgradeOptionsPlan__moreInfo"
@@ -258,9 +271,6 @@
           More info
         </a>
       </p>
-    </div>
-
-    <div class="m-upgradesUpgradeOptionsPlan__row">
       <p
         class="m-upgradesUpgradeOptionsPlan__pricing"
         i18n="@@UPGRADE_OPTIONS__CONTACT_US_PRICING"
