--- a/src/app/modules/upgrades/upgrades.component.scss
+++ b/src/app/modules/upgrades/upgrades.component.scss
@@ -30,6 +30,23 @@
     }
   }
 
+  .m-upgrades__upgradeNowBtn {
+    cursor: pointer;
+    padding: 15px 3vw;
+    @include m-theme() {
+      background-color: #4fc3a9;
+      background-image: linear-gradient(65deg, #4fc3a9 50%, #4eb69f 50%);
+      border-color: rgba(0, 0, 0, 0);
+    }
+    @media screen and (max-width: $m-grid-min-vp) {
+      margin-left: 30px;
+      margin-bottom: 20px;
+    }
+    @media screen and (max-width: $max-mobile) {
+      display: none;
+    }
+  }
+
   m-upgrades__upgradeOptions {
     margin-bottom: 110px;
 
