--- a/src/app/modules/pro/channel/footer/footer.component.html
+++ b/src/app/modules/pro/channel/footer/footer.component.html
@@ -19,7 +19,7 @@
     <a class="m-proChannelFooter__link" routerLink="/p/privacy">
       Privacy
     </a>
-    <a class="m-proChannelFooter__link" routerLink="/p/terms">
+    <a class="m-proChannelFooter__link" routerLink="/p/monetization-terms">
       Terms
     </a>
 
