--- a/src/app/modules/wallet/v2/cash/settings/cash-onboarding/cash-onboarding.component.html
+++ b/src/app/modules/wallet/v2/cash/settings/cash-onboarding/cash-onboarding.component.html
@@ -326,7 +326,11 @@
                 >I have read and agree to the
                 <a href="https://stripe.com/legal" target="_blank">
                   Stripe Services Agreement
-                </a></span
+                </a>
+                and
+                <a routerLink="/p/monetization-terms" target="_blank"
+                  >Minds Monetization Terms</a
+                ></span
               >
             </m-formInput__checkbox>
           </div>
