--- a/src/app/modules/wire/v2/creator/form/form.component.ng.scss
+++ b/src/app/modules/wire/v2/creator/form/form.component.ng.scss
@@ -134,6 +134,13 @@
     @include m-theme() {
       color: themed($m-textColor--secondary);
     }
+
+    a {
+      font-weight: inherit;
+      @include m-theme() {
+        color: themed($m-link);
+      }
+    }
   }
 
   .m-wireCreatorForm__toggleContainer {
